--- a/resume.html
+++ b/resume.html
@@ -36,6 +36,22 @@
       text-decoration: underline;
     }
 
+    .resume-title {
+      text-align: center;
+      font-size: 41px;
+      font-weight: 300;
+      font-family: "Poppins", Arial, sans-serif;
+      margin: 0;
+      color: #222;
+      letter-spacing: 1.5px;
+    }
+
+    .resume-title span {
+      font-weight: 500;
+      color: #111;
+      letter-spacing: 2px;
+    }
+
     .contact {
       display: flex;
       flex-wrap: wrap;
@@ -76,22 +92,6 @@
       grid-template-columns: 1fr 1fr;
     }
 
-    .resume-title {
-      text-align: center;
-      font-size: 41px;
-      font-weight: 300;
-      font-family: "Poppins", Arial, sans-serif;
-      margin: 0;
-      color: #222;
-      letter-spacing: 1.5px;
-    }
-
-    .resume-title span {
-      font-weight: 500;
-      color: #111;
-      letter-spacing: 2px;
-    }
-
     .job+.job {
       border-top: 1px solid #e0e7ef;
       padding-top: 10px;
@@ -113,8 +113,8 @@
       font-size: 18px;
     }
 
-    /* Global typography fix */
-    p, li {
+    /* Global safety */
+    body, p, li {
       color: #222;
     }
   </style>
@@ -127,29 +127,23 @@
 
   <!-- Contact Bar -->
   <div class="contact">
-    <a href="mailto:divyansh.rana12@gmail.com" class="contact-link">
-      divyansh.rana12@gmail.com
-    </a>
+    <a href="mailto:divyansh.rana12@gmail.com" class="contact-link">divyansh.rana12@gmail.com</a>
     <span class="divider">|</span>
-    <a href="https://www.linkedin.com/in/divyansh-rana-a77696142/" class="contact-link" target="_blank">
-      LinkedIn
-    </a>
+    <a href="https://www.linkedin.com/in/divyansh-rana-a77696142/" class="contact-link" target="_blank">LinkedIn</a>
     <span class="divider">|</span>
     <span class="contact-info">+91 8968121890</span>
     <span class="divider">|</span>
     <span class="contact-info">Bengaluru, India</span>
     <span class="divider">|</span>
-    <a href="https://divyanshrana.github.io/docs/portfolio" class="contact-link" target="_blank">
-      Portfolio
-    </a>
+    <a href="https://divyanshrana.github.io/docs/portfolio" class="contact-link" target="_blank">Portfolio</a>
   </div>
 
   <!-- Skills -->
   <div class="section">
     <h2>Skills</h2>
     <div class="skills-grid" style="margin-left: 3.8rem;">
-      <div><b>Backend/Frameworks:</b> Java • Spring Boot • Quarkus • Java EE • Spring MVC • Hibernate</div>
-      <div><b>Cloud/DevOps:</b> AWS (EC2, S3, Lambda, CloudWatch) • Kubernetes • Docker • GitLab CI/CD • Terraform</div>
+      <div><b>Backend/Frameworks:</b> Java • Spring Boot • Quarkus • Java EE • Spring MVC • Hibernate • Application Servers • Servlet Containers • JPA</div>
+      <div><b>Cloud/DevOps:</b> AWS (EC2, S3, Lambda, CloudWatch) • Kubernetes • Docker • GitLab CI/CD • Terraform • Helm • Grafana</div>
       <div><b>Data Messaging:</b> Kafka</div>
       <div><b>Frontend:</b> Angular • React</div>
       <div><b>Databases:</b> PostgreSQL • MySQL • MongoDB • DynamoDB • Neo4j • Redis</div>
@@ -158,28 +152,65 @@
 
   <!-- Experience -->
   <div class="section">
-    <h2>Experience | 5+ years</h2>
+    <h2>Experience | 5+ years | Backend Engineering • Distributed Systems • Cloud</h2>
 
     <div class="job">
       <div>
         <span style="font-weight: bold;">Delta Airlines</span> –
         <span class="job-title">Software Engineer II</span>
-        <span class="job-date">Dec 2022 – Present | Bangalore</span>
+        <span class="job-date">Dec 2022 – Present | Bangalore, India</span>
       </div>
       <ul>
-        <li><b>Architected and developed</b> a cloud-native booking platform in Java + Quarkus.</li>
-        <li><b>Cut booking latency by 30%</b>, supported 30K+ concurrent users.</li>
+        <li><b>Architected and developed a cloud-native vacation booking platform</b> in <b>Java, Quarkus, Redis</b>, reducing booking latency by 30% and supporting <b>30K+ concurrent users</b>.</li>
+        <li><b>Led a cost-optimization initiative</b> in the <b>ROSA (Red Hat OpenShift Service on AWS)</b> environment by enabling autoscaling, saving <b>$30,000–$40,000 annually</b>.</li>
+        <li>Implemented SAGA-based distributed transactions with <b>Kafka</b> for fault-tolerant booking flows.</li>
+        <li><b>Developed a real-time user activity detection service</b>, enhancing engagement and security.</li>
+        <li>Owned roadmap for Spring-based vacation booking platform handling $4.8–9.6M weekly bookings with <b>99.9% availability on AWS EKS</b>.</li>
+        <li>Modernised 11 legacy mainframe apps to Nx micro-frontends and <b>Quarkus containers</b>, cutting deployment from weeks to hours.</li>
+        <li>Reduced <b>vacation-search latency by 93%</b> (30s → 2s).</li>
+        <li>Coached juniors on design reviews and CI/CD, boosting deployment success to <b>99%+</b>.</li>
+        <li>Instrumented services with <b>CloudWatch, Grafana</b>, reducing MTTR by 40%.</li>
+        <li class="job-skill">JAVA, AWS, EC2, S3, Route53, EventBridge, Cloudwatch, DynamoDB, IAMs, Redis, Quarkus, Springboot, Angular, NX, MongoDB, PostgreSQL, Docker</li>
       </ul>
     </div>
 
-    <!-- Add other jobs here -->
+    <div class="job">
+      <div>
+        <span style="font-weight: bold;">Scienaptic AI</span> –
+        <span class="job-title">Software Engineer II</span>
+        <span class="job-date">Oct 2020 – Dec 2022 | Bangalore, India</span>
+      </div>
+      <ul>
+        <li>Delivered an <b>automated credit-decisioning platform</b> used by 150+ banks, processing 3M decisions and ~$2.84B monthly.</li>
+        <li>Integrated bureau + alternative-data APIs, boosting accuracy by 15%.</li>
+        <li>Built pricing-guidance API, enabling ~5% sales uplift.</li>
+        <li>Developed a forecasting dashboard (Spring Boot, Kafka, Spark Streaming), reducing reporting from hours to minutes.</li>
+        <li>Introduced <b>TDD + PR templates</b>, raising coverage to 80% and cutting defects by 30%.</li>
+        <li class="job-skill">JAVA, Springboot, Kafka, Junit, AWS Lambda, NodeJS, PySpark, MongoDB, AngularJS</li>
+      </ul>
+    </div>
+
+    <div class="job">
+      <div>
+        <span style="font-weight: bold;">Infosys</span> –
+        <span class="job-title">Systems Engineer</span>
+        <span class="job-date">Aug 2019 – Oct 2020 | Pune, India</span>
+      </div>
+      <ul>
+        <li>Developed an internal job portal (Angular/Spring) serving 2,000+ employees.</li>
+        <li>Revamped intranet homepage for 10,000 staff, increasing engagement by 25%.</li>
+        <li>Consistently met 100% sprint commitments with CI practices.</li>
+      </ul>
+    </div>
   </div>
 
   <!-- Education -->
   <div class="section">
     <h2>Education</h2>
     <p style="margin-left: 3.8rem;">
-      B.E. in Computer Science Engineering | 2015 – 2019 | CGPA: 8.2/10
+      B.E. in Computer Science Engineering | 2015 – 2019 | India<br>
+      CGPA: 8.2 / 10<br>
+      Relevant Skills: <b>OOPS</b>, <b>DSA</b>, Microservices, Cloud-Native Dev, Event-Driven Design, <b>DevOps CI/CD</b>, Agile, TDD, Performance Optimisation
     </p>
   </div>
 
@@ -188,10 +219,13 @@
     <h2>Projects</h2>
     <ul style="margin-left: 2.5rem;">
       <li>
-        <a href="https://github.com/divyanshrana/reddit-image-bot" target="_blank">
-          GenAI Reddit Uploader
-        </a>
-        – Automated bot using Stable Diffusion XL.
+        <a href="https://github.com/divyanshrana/reddit-image-bot" target="_blank">GenAI Reddit Uploader</a> – Automated bot using <b>Stable Diffusion XL</b>, GitHub Actions for scheduling, end-to-end automated publishing.
+      </li>
+      <li>
+        <a href="https://github.com/divyanshrana/photogram" target="_blank">Photogram (Social Media App)</a> – Social-media clone with Spring Boot, React, JWT, REST APIs, secure image storage.
+      </li>
+      <li>
+        <a href="https://github.com/divyanshrana/graphlink" target="_blank">GraphLink (Scalable Backend Infra)</a> – Event-driven microservices playground on Kubernetes with Neo4j, PostgreSQL, Kafka.
       </li>
     </ul>
   </div>
@@ -200,8 +234,10 @@
   <div class="section">
     <h2>Achievements & Honors</h2>
     <ul style="margin-left: 3.8rem;">
-      <li><b>Top MVP Learner, Delta Air Lines</b>, Q1–Q2 2023</li>
-      <li><b>Promotion: Software Engineer I → II</b>, Scienaptic AI</li>
+      <li><b>Top MVP Learner</b>, Delta Air Lines (156 Udemy Business hours), Q1-Q2 2023.</li>
+      <li><b>Promotion: Software Developer I → II</b>, Delta Air Lines (Mar 2024)</li>
+      <li><b>Promotion: Software Engineer I → II</b>, Scienaptic AI (Oct 2022)</li>
+      <li><b>AI Foundations Nanodegree</b> – Udacity | Issued May 2018</li>
     </ul>
   </div>
 
